# vanedb-cpp

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  IMPLEMENTATION-SUMMARY.md  README.md  REFACTORING-CHECKLIST.md  REVIEW-FINDINGS-AND-FIXES.md  SECURITY.md  code-smell-detector-report.md  code-smell-detector-summary.md  codecov.yml  final-implementation-plan.md  legacy-code-analysis-report.md  pyproject.toml  refactoring-plan.md  test-review-for-refactoring.md
.github/: CODEOWNERS  Dockerfile.arm64-test
.github/workflows/: build-and-test.yml  docs.yml  publish.yml
benchmarks/: bench_distance.cpp  bench_hnsw_index.cpp  bench_vector_store.cpp
capi/: vanedb_capi.cpp  vanedb_capi.h
cmake/toolchains/: android.toolchain.cmake  ios.toolchain.cmake
docs/: GUIDE.md
docs/superpowers/plans/: 2026-03-29-vanedb-rust-foundation.md  2026-03-30-vanedb-hnsw-index.md  2026-03-31-vanedb-mmap-store.md  2026-04-01-vanedb-benchmarks.md  2026-04-02-vanedb-gpu.md  2026-04-03-vanedb-python-bindings.md  2026-04-04-vanedb-wasm.md  2026-05-28-cpp-c-api.md
docs/superpowers/specs/: 2026-03-29-vanedb-rust-rewrite-design.md
examples/: semantic_search_example.cpp
python/: quiverdb.cpp  vanedb.cpp
src/core/: distance.h  distance_strategy.h  hnsw_index.h  mmap_vector_store.h  vector_store.h  version.h
src/core/detail/: file_utils.h
src/core/gpu/: cuda_distance.cuh  gpu_distance.h  metal_distance.h
src/utils/: logging.h
tests/: test_distance.cpp  test_distance_strategy.cpp  test_hnsw_index.cpp  test_metal_distance.mm  test_mmap_vector_store.cpp  test_python_bindings.py  test_vector_store.cpp
tests/capi/: test_capi.c
