[project]
name = "vanedb"
version = "0.1.0"
description = "Embeddable vector database for edge AI and local-first applications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Anton Tsvetkov"}
]
keywords = ["vector", "database", "embedding", "hnsw", "similarity-search", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "numpy>=1.24"]

[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
# Build ABI3 wheel compatible with Python 3.9+
wheel.py-api = "cp39"

[tool.scikit-build.cmake.define]
VANEDB_BUILD_TESTS = "OFF"
VANEDB_BUILD_BENCHMARKS = "OFF"
VANEDB_BUILD_EXAMPLES = "OFF"
VANEDB_BUILD_PYTHON = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
